--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -5,8 +5,6 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron: '0 0 * * *'
 
 jobs:
   tools:
@@ -15,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6, 3.8]
+        python-version: [3.8]
 
     steps:
     - uses: actions/checkout@v1
