--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -35,5 +35,5 @@ jobs:
       run: python setup.py install
     - name: Download data files
       run: ./download.sh
-    - name: Run single test
-      run: python tests/${{ matrix.test-filenames }} -v
+    - name: Run all tests
+      run: pytest -v tests/*
