--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -29,5 +29,7 @@ jobs:
       run: python setup.py install
     - name: Download data files
       run: ./download.sh
+    - name: install pytest
+      run: pip install pytest
     - name: Run all tests
-      run: pytest -v tests/*
+      run: python -m pytest -v tests/*
