remove bothersome flake8 warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ with-coverage=1
 cover-package=torchani
 
 [flake8]
-ignore = E501, W503
+ignore = E501, W503, E127, E128
 exclude =
     .git,
     __pycache__,
