--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,10 +1,8 @@
 name: unittests
 
 on:
-  pull_request:
-  push:
-    branches:
-      - master
+  repository_dispatch:
+    types: [unittests-command]
 
 jobs:
   unittests:
