--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,10 +1,8 @@
 name: flake8
 
 on:
-  pull_request:
-  push:
-    branches:
-      - master
+  repository_dispatch:
+    types: [work-command]
 
 jobs:
   flake8:
