--- a/.github/workflows/slash_command.yml
+++ b/.github/workflows/slash_command.yml
@@ -12,4 +12,4 @@ jobs:
         token: ${{ secrets.PAT }}
         reaction-token: ${{ secrets.PAT }}
         commands: |
-          unittests
+          work
