--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -1,10 +1,8 @@
 name: tools
 
 on:
-  pull_request:
-  push:
-    branches:
-      - master
+  repository_dispatch:
+    types: [work-command]
 
 jobs:
   tools:
