--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -1,8 +1,10 @@
 name: mypy
 
 on:
-  repository_dispatch:
-    types: [work-command]
+  pull_request:
+  push:
+    branches:
+      - master
 
 jobs:
   mypy:
