--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -2,6 +2,9 @@ name: flake8
 
 on:
   pull_request:
+    paths:
+      - 'ci/trigger.test'
+      - 'ci/trigger.testall'
   push:
     branches:
       - master
