--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -36,7 +36,11 @@ jobs:
     - name: Fetch submodules
       run: git submodule update --init
     - name: Install cuda
-      run: ci/install_cuda.sh
+      run: |
+        source ci/install_cuda.sh
+        echo "CUDA_HOME=${CUDA_HOME}" >> $GITHUB_ENV
+        echo "LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
+        echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
     - name: Install dependencies
       run: ci/install_dependencies.sh
     - name: Install TorchANI
