--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -44,6 +44,10 @@ jobs:
     - name: Install dependencies
       run: ci/install_dependencies.sh
     - name: Install TorchANI
-      run: python setup.py install --cuaev
+      run: |
+        echo $CUDA_HOME
+        echo $LD_LIBRARY_PATH
+        nvcc -V
+        python setup.py install --cuaev --only-sm80
     - name: Run cuaev test
       run: pytest tests/test_cuaev.py -v
