--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,7 +29,12 @@ jobs:
     - name: Install TorchANI
       run: python setup.py install
     - name: Download data files
-      run: ./download.sh
+      run: |
+        if [ -d download ]; then
+          echo Already Downloaded
+        else
+          ./download.sh
+        fi
     # build docs
     - name: Build documents
       run: sphinx-build docs build
