--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -28,7 +28,12 @@ jobs:
     - name: Install TorchANI
       run: python setup.py install
     - name: Download data files
-      run: ./download.sh
+      run: |
+        if [ -d download ]; then
+          echo Already Downloaded
+        else
+          ./download.sh
+        fi
     - name: install pytest
       run: pip install pytest
     - name: Run all tests
