--- a/.github/workflows/runnable_submodules.yml
+++ b/.github/workflows/runnable_submodules.yml
@@ -18,6 +18,10 @@ jobs:
         python-version: [3.8]
 
     steps:
+    - name: Cancel Previous Runs
+      uses: styfle/cancel-workflow-action@0.8.0
+      with:
+        access_token: ${{ github.token }}
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
