--- a/.github/workflows/cancel.yml
+++ b/.github/workflows/cancel.yml
@@ -1,5 +1,11 @@
 name: Cancel
-on: [push]
+
+on:
+  pull_request:
+  push:
+    branches:
+      - master
+
 jobs:
   cancel:
     name: 'Cancel Previous Runs'
