cancel with slash commands

--- a/.github/workflows/cancel.yml
+++ b/.github/workflows/cancel.yml
@@ -1,10 +1,8 @@
 name: Cancel
 
 on:
-  pull_request:
-  push:
-    branches:
-      - master
+  repository_dispatch:
+    types: [cancel-command]
 
 jobs:
   cancel:
