--- a/.github/workflows/slash_command.yml
+++ b/.github/workflows/slash_command.yml
@@ -1,7 +1,9 @@
-name: Slash Command Dispatch
+name: Dispatcher
+
 on:
   issue_comment:
     types: [created]
+
 jobs:
   slashCommandDispatch:
     runs-on: ubuntu-latest
