--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.8]
+        python-version: [3.8, 3.6]
 
     steps:
     - name: Cancel Previous Runs
