--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -4,8 +4,8 @@ on:
   pull_request:
     paths:
       - 'setup.py'
-      - 'torchani/cuaev/**'
-      - 'torchani/aev.py'
+      - 'torchani/csrc/**'
+      - 'torchani/aev/**'
       - 'ci/**'
       - 'test/test_cuaev.py'
   push:
