--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -41,6 +41,6 @@ jobs:
       run: python -m pytest -v tests/*
     - if: always()
     - name: remove venv
-    - run: deactivate && rm -rf /tmp/torchani-unittest/
+      run: deactivate && rm -rf /tmp/torchani-unittest/
 
      
