--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -26,7 +26,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: create venv
-      run: python -m venv /tmp/torchani-unittest && source /tmp/torchani-unittest/activate
+      run: python -m venv /tmp/torchani-unittest
+    - name: activate venv
+      run: source /tmp/torchani-unittest/activate
     - name: Fetch submodules
       run: git submodule update --init
     - name: Install dependencies
@@ -39,7 +41,7 @@ jobs:
       run: pip install pytest
     - name: Run all tests
       run: python -m pytest -v tests/*
-    - if: always()
+      if: always()
     - name: remove venv
       run: deactivate && rm -rf /tmp/torchani-unittest/
 
