--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -25,9 +25,18 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: create venv
+      run: | 
+          python -m venv /tmp/torchani-unittest 
+          source /tmp/torchani-unittest/activate
     - name: Install dependencies
       run: |
         pip install --upgrade pip
         pip install --upgrade mypy
     - name: Type checking with mypy
       run: mypy --ignore-missing-imports .
+      if: always()
+    - name: remove venv
+      run: | 
+          deactivate
+          rm -rf /tmp/torchani-unittest/
