--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -26,23 +26,23 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: create venv
-      run: | 
-          python -m venv /tmp/torchani-ci
-          source /tmp/torchani-ci/bin/activate
+      run: python -m venv /tmp/torchani-ci
     - name: Fetch submodules
       run: git submodule update --init
     - name: Install dependencies
-      run: ci/install_dependencies.sh
+      run: |
+          source /tmp/torchani-ci/bin/activate
+          ci/install_dependencies.sh
     - name: Install TorchANI
-      run: python setup.py install
+      run: |
+          source /tmp/torchani-ci/bin/activate
+          python setup.py install
     - name: Download data files
       run: ./download.sh
-    - name: install pytest
-      run: pip install pytest
     - name: Run all tests
-      run: python -m pytest -v tests/*
-      if: always()
+      run: |
+          source /tmp/torchani-ci/bin/activate
+          python -m pytest -v tests/*
+    if: always()
     - name: remove venv
-      run: | 
-          deactivate
-          rm -rf /tmp/torchani-ci/
+      run: rm -rf /tmp/torchani-ci/
