--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -26,16 +26,16 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: create venv
-      run: python -m venv /tmp/torchani-ci
+      run: python -m venv /tmp/torchani-mypy
     - name: Install dependencies
       run: |
-        source /tmp/torchani-ci/bin/activate
-        pip install --upgrade pip
-        pip install --upgrade mypy
+        source /tmp/torchani-mypy/bin/activate
+        pip install --no-cache-dir --upgrade pip
+        pip install --no-cache-dir --upgrade mypy
     - name: Type checking with mypy
       run: |
-        source /tmp/torchani-ci/bin/activate
+        source /tmp/torchani-mypy/bin/activate
         mypy --ignore-missing-imports .
     - name: remove venv
       if: always()
-      run: rm -rf /tmp/torchani-ci/
+      run: rm -rf /tmp/torchani-mypy/
