--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -45,13 +45,23 @@ jobs:
         echo "CUDA_HOME=${CUDA_HOME}" >> $GITHUB_ENV
         echo "LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
         echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
+    - name: create venv
+      run: python -m venv /tmp/torchani-cuda
     - name: Install dependencies
-      run: ci/install_dependencies.sh
+      run: |
+        source /tmp/torchani-cuda/bin/activate
+        ci/install_dependencies.sh
     - name: Install TorchANI
       run: |
+        source /tmp/torchani-cuda/bin/activate
         echo $CUDA_HOME
         echo $LD_LIBRARY_PATH
         nvcc -V
         python setup.py install --cuaev --only-sm80
     - name: Run cuaev test
-      run: pytest tests/test_cuaev.py -v
+      run: |
+          source /tmp/torchani-cuda/bin/activate
+          pytest tests/test_cuaev.py -v
+    - name: remove venv
+      if: always()
+      run: rm -rf /tmp/torchani-mypy/
