--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -57,7 +57,7 @@ jobs:
         echo $CUDA_HOME
         echo $LD_LIBRARY_PATH
         nvcc -V
-        python setup.py install --cuaev --only-sm80
+        python setup.py install --ext --only-sm80
     - name: Run cuaev test
       run: |
           source /tmp/torchani-cuda/bin/activate
