--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade pip
+        ci/install_dependencies.sh
         pip install --upgrade mypy
     - name: Type checking with mypy
       run: mypy --ignore-missing-imports .
