--- a/.github/workflows/stable-torch.yml
+++ b/.github/workflows/stable-torch.yml
@@ -1,7 +1,6 @@
 name: stable-torch
 
 on:
-  pull_request:
   push:
     branches:
       - master
@@ -11,11 +10,12 @@ on:
 jobs:
   stable-torch:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       fail-fast: false
+      max-parallel: 4
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
 
     steps:
     - name: Cancel Previous Runs
@@ -24,16 +24,22 @@ jobs:
         access_token: ${{ github.token }}
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
     - name: Fetch submodules
       run: git submodule update --init
     - name: Install dependencies
-      run: ci/install_dependencies.sh
+      run: ci/install_stable_dependencies.sh
     - name: Install TorchANI
-      run: python setup.py install
+      run: |
+        echo $CUDA_HOME
+        echo $LD_LIBRARY_PATH
+        nvcc -V
+        python setup.py install --cuaev --only-sm80
     - name: Download data files
       run: ./download.sh
-    - name: Run tests
-      run: pytest
+    - name: install pytest
+      run: pip install pytest
+    - name: Run all tests
+      run: python -m pytest -v tests/*
