--- a/.github/workflows/stable-torch.yml
+++ b/.github/workflows/stable-torch.yml
@@ -30,6 +30,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Fetch submodules
       run: git submodule update --init
+    - name: Install cuda
+      run: |
+        source ci/install_cuda.sh
+        echo "CUDA_HOME=${CUDA_HOME}" >> $GITHUB_ENV
+        echo "LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
+        echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
     - name: Install dependencies
       run: ci/install_stable_dependencies.sh
     - name: Install TorchANI
