--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -52,6 +52,6 @@ jobs:
         echo $CUDA_HOME
         echo $LD_LIBRARY_PATH
         nvcc -V
-        python setup.py install --cuaev --only-sm80
+        pip install -e . --global-option="--ext" --global-option="--only-sm80"  -vvv
     - name: Run cuaev test
       run: pytest tests/test_cuaev.py -v
