--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -23,35 +23,20 @@ jobs:
 
     runs-on: self-hosted
     strategy:
-      max-parallel: 4
+      fail-fast: false
       matrix:
-        python-version: [3.8, 3.6]
+        python-version: [3.8]
+        torch-version: ['stable', 'nightly']
+        cuda: ['cuda']
 
     steps:
-    - name: Cancel Previous Runs
-      uses: styfle/cancel-workflow-action@0.8.0
-      with:
-        access_token: ${{ github.token }}
-    - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
+    - name: Install Torchani with ${{ matrix.cuda }}, python ${{ matrix.python-version}} and torch ${{ matrix.torch-version }}
+      uses: ./.github/actions/install_torchani
+      with: 
+        token: ${{ github.token }}
         python-version: ${{ matrix.python-version }}
-    - name: Fetch submodules
-      run: git submodule update --init
-    - name: Install cuda
-      run: |
-        source ci/install_cuda.sh
-        echo "CUDA_HOME=${CUDA_HOME}" >> $GITHUB_ENV
-        echo "LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
-        echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
-    - name: Install dependencies
-      run: ci/install_dependencies.sh
-    - name: Install TorchANI
-      run: |
-        echo $CUDA_HOME
-        echo $LD_LIBRARY_PATH
-        nvcc -V
-        python setup.py install --cuaev --only-sm80
+        cuda: ${{ matrix.cuda }}
+        torch-version: ${{ matrix.torch-version }}
+
     - name: Run cuaev test
       run: pytest tests/test_cuaev.py -v
