--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -11,23 +11,23 @@ jobs:
 
     runs-on: self-hosted
     strategy:
-      max-parallel: 4
+      fail-fast: false
       matrix:
         python-version: [3.8]
+        cuda: ['no-cuda']
+        torch-version: ['nightly']
 
     steps:
-    - name: Cancel Previous Runs
-      uses: styfle/cancel-workflow-action@0.8.0
-      with:
-        access_token: ${{ github.token }}
-    - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
+    - name: Install Torchani with ${{ matrix.cuda }}, python ${{ matrix.python-version}} and torch ${{ matrix.torch-version }}
+      uses: ./.github/actions/install_torchani
+      with: 
+        token: ${{ github.token }}
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        pip install --upgrade pip
-        pip install --upgrade mypy
+        cuda: ${{ matrix.cuda }}
+        torch-version: ${{ matrix.torch-version }}
+
+    - name: Install mypy
+      run: pip install --upgrade mypy
+
     - name: Type checking with mypy
       run: mypy --ignore-missing-imports .
