--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -11,33 +11,28 @@ jobs:
 
     runs-on: self-hosted
     strategy:
-      max-parallel: 4
+      fail-fast: false
       matrix:
         python-version: [3.8]
+        cuda: ['no-cuda']
+        torch-version: ['nightly']
 
-    steps:
-    - name: Cancel Previous Runs
-      uses: styfle/cancel-workflow-action@0.8.0
-      with:
-        access_token: ${{ github.token }}
-    - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
+    - name: Install Torchani with ${{ matrix.cuda }}, python ${{ matrix.python-version}} and torch ${{ matrix.torch-version }}
+      uses: ./.github/actions/install_torchani
+      with: 
+        token: ${{ github.token }}
         python-version: ${{ matrix.python-version }}
-    - name: Fetch submodules
-      run: git submodule update --init
-    - name: Install dependencies
-      run: ci/install_dependencies.sh
-    - name: Install TorchANI
-      run: python setup.py install
-    - name: Download data files
-      run: ./download.sh
+        cuda: ${{ matrix.cuda }}
+        torch-version: ${{ matrix.torch-version }}
+
     - name: Inference benchmark
       run: python tools/inference-benchmark.py --tqdm dataset/xyz_files/CH4-5.xyz
+
     - name: COMP6 Benchmark
       run: python tools/comp6.py dataset/COMP6/COMP6v1/s66x8
+
     - name: Training Benchmark
       run: python tools/training-benchmark.py dataset/ani1-up_to_gdb4/ani_gdb_s01.h5
+
     - name: Training Benchmark Nsight System
       run: python tools/training-benchmark-nsys-profile.py --dry-run dataset/ani1-up_to_gdb4/ani_gdb_s01.h5
