--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -17,11 +17,17 @@ jobs:
         cuda: ['no-cuda']
         torch-version: ['nightly']
 
-    steps:
+   - name: Cancel Previous Runs
+     uses: styfle/cancel-workflow-action@0.8.0
+     with:
+       access_token: ${{ github.token }}
+
+   - name: Checkout TorchANI
+     uses: actions/checkout@v1
+
     - name: Install Torchani with ${{ matrix.cuda }}, python ${{ matrix.python-version}} and torch ${{ matrix.torch-version }}
       uses: ./.github/actions/install_torchani
       with: 
-        token: ${{ github.token }}
         python-version: ${{ matrix.python-version }}
         cuda: ${{ matrix.cuda }}
         torch-version: ${{ matrix.torch-version }}
