--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -16,25 +16,24 @@ jobs:
         python-version: [3.8]
         cuda: ['no-cuda']
         torch-version: ['nightly']
-
-   - steps:
-       - name: Cancel Previous Runs
-         uses: styfle/cancel-workflow-action@0.8.0
-         with:
-           access_token: ${{ github.token }}
-
-       - name: Checkout TorchANI
-         uses: actions/checkout@v1
-
-       - name: Install Torchani with ${{ matrix.cuda }}, python ${{ matrix.python-version}} and torch ${{ matrix.torch-version }}
-         uses: ./.github/actions/install_torchani
-         with: 
-           python-version: ${{ matrix.python-version }}
-           cuda: ${{ matrix.cuda }}
-           torch-version: ${{ matrix.torch-version }}
-
-       - name: Install flake8
-         run: pip install --upgrade flake8
-
-       - name: Lint with flake8
-         run: flake8 .
+    steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.8.0
+        with:
+          access_token: ${{ github.token }}
+      
+      - name: Checkout TorchANI
+        uses: actions/checkout@v1
+      
+      - name: Install Torchani with ${{ matrix.cuda }}, python ${{ matrix.python-version}} and torch ${{ matrix.torch-version }}
+        uses: ./.github/actions/install_torchani
+        with: 
+          python-version: ${{ matrix.python-version }}
+          cuda: ${{ matrix.cuda }}
+          torch-version: ${{ matrix.torch-version }}
+      
+      - name: Install flake8
+        run: pip install --upgrade flake8
+      
+      - name: Lint with flake8
+        run: flake8 .
