--- a/.github/workflows/stable-torch.yml
+++ b/.github/workflows/stable-torch.yml
@@ -43,7 +43,7 @@ jobs:
         echo $CUDA_HOME
         echo $LD_LIBRARY_PATH
         nvcc -V
-        pip install -e . --global-option="--ext" --global-option="--only-sm80"  -vvv
+        python setup.py install --ext --only-sm80
     - name: Download data files
       run: ./download.sh
     - name: install pytest
