--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -33,6 +33,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up conda
       uses: s-weigand/setup-conda@v1
+    - run: conda --version
+    - run: which python
     - name: Fetch submodules
       run: git submodule update --init
     - name: Install cuda
