--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -31,3 +31,7 @@ jobs:
         pip install flake8
     - name: Lint with flake8
       run: flake8 .
+
+concurrency:
+  group: build-linux-conda-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
