--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -31,10 +31,15 @@ jobs:
       with:
         access_token: ${{ github.token }}
     - uses: actions/checkout@v2
-    - name: Set up conda
-      uses: s-weigand/setup-conda@v1
-    - run: conda --version
-    - run: which python
+    # - name: Set up conda
+    #   uses: s-weigand/setup-conda@v1
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-update-conda: true
+        python-version: 3.8
+    - name: Conda info
+      shell: bash -l {0}
+      run: conda info
     - name: Fetch submodules
       run: git submodule update --init
     - name: Install cuda
@@ -51,3 +56,7 @@ jobs:
         python -V
         nvcc -V
         ./conda/build_conda.sh
+
+concurrency:
+  group: build-linux-conda-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
