--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -37,3 +37,7 @@ jobs:
       run: pip install pytest
     - name: Run all tests
       run: python -m pytest -v tests/*
+
+concurrency:
+  group: build-linux-conda-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
