--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -35,7 +35,8 @@ jobs:
     #   uses: s-weigand/setup-conda@v1
     - uses: conda-incubator/setup-miniconda@v2
       with:
-        auto-update-conda: true
+        miniconda-version: "latest"
+        activate-environment: base
         python-version: 3.8
     - name: Conda info
       shell: bash -l {0}
