--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -36,7 +36,7 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v2
       with:
         miniconda-version: "latest"
-        activate-environment: base
+        activate-environment: foo
         python-version: 3.8
     - name: Conda info
       shell: bash -l {0}
