--- a/.github/workflows/test-conda.yml
+++ b/.github/workflows/test-conda.yml
@@ -18,7 +18,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: s-weigand/setup-conda@v1
-    - run: conda --version`
+    - run: conda --version
+    - run: which python
 
 concurrency:
   group: test-conda-${{ github.event.pull_request.number || github.sha }}
