--- a/.github/workflows/test-conda.yml
+++ b/.github/workflows/test-conda.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test-conda:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       max-parallel: 4
       matrix:
