--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -21,23 +21,21 @@ on:
 jobs:
   conda-build:
 
-    runs-on: self-hosted
+    runs-on: ubuntu-18.04
     strategy:
       max-parallel: 4
+      matrix:
+        python-version: [3.8]
 
     steps:
-    - name: Cancel Previous Runs
-      uses: styfle/cancel-workflow-action@0.8.0
-      with:
-        access_token: ${{ github.token }}
     - uses: actions/checkout@v2
-    # - name: Set up conda
-    #   uses: s-weigand/setup-conda@v1
+    - name: Set up conda
     - uses: conda-incubator/setup-miniconda@v2
       with:
         miniconda-version: "latest"
         activate-environment: foo
-        python-version: 3.8
+        auto-update-conda: false
+        python-version: ${{ matrix.python-version }}
     - name: Conda info
       shell: bash -l {0}
       run: conda info
