--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -30,6 +30,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up conda
+      run: |
+        mkdir -p /root/miniconda
+        echo "CONDA=/root/miniconda" >> $GITHUB_ENV
       uses: conda-incubator/setup-miniconda@v2
       with:
         miniconda-version: "latest"
