--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -21,7 +21,7 @@ on:
 jobs:
   conda-build:
 
-    runs-on: ubuntu-18.04
+    runs-on: self-hosted
     strategy:
       max-parallel: 4
       matrix:
