--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -30,7 +30,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Use Cached pkgs
-      run: mv /root/conda_pkgs_dir_saved /root/conda_pkgs_dir
+      run: |
+      if [ ! -d /root/conda_pkgs_dir_saved ]; then
+        mv /root/conda_pkgs_dir_saved /root/conda_pkgs_dir
+      fi
     - name: Set up conda path prefix
       run: |
         mkdir -p /root/miniconda3
