--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -31,7 +31,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Use Cached pkgs
       run: |
-        if [ ! -d /root/conda_pkgs_dir_saved ]; then
+        if [ -d /root/conda_pkgs_dir_saved ]; then
           mv /root/conda_pkgs_dir_saved /root/conda_pkgs_dir
         fi
     - name: Set up conda path prefix
