--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -21,7 +21,7 @@ on:
 jobs:
   conda-build:
 
-    runs-on: self-hosted
+    runs-on: [self-hosted, miniconda]
     strategy:
       max-parallel: 4
       matrix:
@@ -29,15 +29,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Cached pkgs
+    - name: Use saved pkgs
       run: |
         if [ -d /root/conda_pkgs_dir_saved ]; then
           mv /root/conda_pkgs_dir_saved /root/conda_pkgs_dir
         fi
     - name: Set up conda path prefix
       run: |
-        mkdir -p /root/miniconda3
-        echo "CONDA=/root/miniconda3" >> $GITHUB_ENV
+        echo "CONDA=/root/miniconda" >> $GITHUB_ENV
     - name: Set up conda
       uses: conda-incubator/setup-miniconda@v2
       with:
@@ -50,19 +49,19 @@ jobs:
       run: conda info
     - name: Fetch submodules
       run: git submodule update --init
-    - name: Install cuda
-      run: |
-        source ci/install_cuda.sh
-        echo "CUDA_HOME=${CUDA_HOME}" >> $GITHUB_ENV
-        echo "LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
-        echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
-    - name: Conda Build
-      run: |
-        echo $CUDA_HOME
-        echo $LD_LIBRARY_PATH
-        nvcc -V
-        ./conda/build_conda.sh
-    - name: Use Cached pkgs
+    # - name: Install cuda
+    #   run: |
+    #     source ci/install_cuda.sh
+    #     echo "CUDA_HOME=${CUDA_HOME}" >> $GITHUB_ENV
+    #     echo "LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
+    #     echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
+    # - name: Conda Build
+    #   run: |
+    #     echo $CUDA_HOME
+    #     echo $LD_LIBRARY_PATH
+    #     nvcc -V
+    #     ./conda/build_conda.sh
+    - name: Saved pkgs to avoid to be removed
       run: mv /root/conda_pkgs_dir /root/conda_pkgs_dir_saved
 
 concurrency:
