--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -49,18 +49,18 @@ jobs:
       run: conda info
     - name: Fetch submodules
       run: git submodule update --init
-    # - name: Install cuda
-    #   run: |
-    #     source ci/install_cuda.sh
-    #     echo "CUDA_HOME=${CUDA_HOME}" >> $GITHUB_ENV
-    #     echo "LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
-    #     echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
-    # - name: Conda Build
-    #   run: |
-    #     echo $CUDA_HOME
-    #     echo $LD_LIBRARY_PATH
-    #     nvcc -V
-    #     ./conda/build_conda.sh
+    - name: Install cuda
+      run: |
+        source ci/install_cuda.sh
+        echo "CUDA_HOME=${CUDA_HOME}" >> $GITHUB_ENV
+        echo "LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
+        echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
+    - name: Conda Build
+      run: |
+        echo $CUDA_HOME
+        echo $LD_LIBRARY_PATH
+        nvcc -V
+        ./conda/build_conda.sh
     - name: Saved pkgs to avoid to be removed
       run: mv /root/conda_pkgs_dir /root/conda_pkgs_dir_saved
 
