--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -62,6 +62,7 @@ jobs:
         nvcc -V
         ./conda/build_conda.sh
     - name: Saved pkgs to avoid to be removed
+      # Waiting feature to be added: https://github.com/conda-incubator/setup-miniconda/issues/181
       run: mv /root/conda_pkgs_dir /root/conda_pkgs_dir_saved
 
 concurrency:
