--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -13,8 +13,8 @@ on:
       - master
     paths:
       - 'setup.py'
-      - 'torchani/cuaev/**'
-      - 'torchani/aev.py'
+      - 'torchani/csrc/**'
+      - 'torchani/aev/**'
       - 'ci/**'
       - 'test/test_cuaev.py'
 
