--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -13,15 +13,15 @@ on:
       - master
     paths:
       - 'setup.py'
-      - 'torchani/cuaev/**'
-      - 'torchani/aev.py'
+      - 'torchani/csrc/**'
+      - 'torchani/aev/**'
       - 'ci/**'
       - 'test/test_cuaev.py'
 
 jobs:
   cuda:
 
-    runs-on: self-hosted
+    runs-on: ubuntu-18.04
     strategy:
       max-parallel: 4
       matrix:
