--- a/.github/workflows/conda-release.yml
+++ b/.github/workflows/conda-release.yml
@@ -47,6 +47,7 @@ jobs:
         echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
     - name: Setup Server Key
       run: |
+        mkdir -p ~/.ssh
         echo "${{ secrets.SERVER_PUBKEY }}" > ~/.ssh/id_rsa.pub
         echo "${{ secrets.SERVER_PRIKEY }}" > ~/.ssh/id_rsa
     - name: Conda Build
