--- a/.github/workflows/conda-release.yml
+++ b/.github/workflows/conda-release.yml
@@ -1,6 +1,7 @@
 name: conda-release
 
 on:
+  pull_request:
   push:
     branches:
       - master
@@ -72,5 +73,5 @@ jobs:
       run: conda env remove --name foo${{ matrix.python-version }}
 
 concurrency:
-  group: conda-release-${{ github.sha }}
+  group: conda-build-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: true
